@@ -44,7 +44,9 @@ UtilsLogs.addLoggingLevel("TRACE", 15)
 try:
     PATH_TO_CONF = os.path.dirname(os.path.realpath(__file__))
     logging.config.fileConfig(os.path.join(PATH_TO_CONF, "logging.conf"))
-    logging.debug("file %s loaded" % os.path.join(PATH_TO_CONF, "logging.conf"))
+    logging.debug(
+        "file %s loaded" % os.path.join(PATH_TO_CONF, "logging.conf")
+    )
 except Exception as exception:  # pylint: disable=broad-except
     logging.warning("cannot load logging.conf : %s" % exception)
 logging.setLogRecordFactory(LogRecord)  # pylint: disable=no-member
