@@ -1,9 +1,0 @@
-astropy==4.2
-pandas==1.2.2
-matplotlib==3.3.4
-healpy==1.14.0
-corner==2.1.0
-ligo.skymap==0.5.0
-tables==3.6.1
-seaborn==0.11.1
-
