@@ -1,4 +1,14 @@
-### Add licence in the header of each python file (HEAD -> refactoring)
+### Change requirements to requirements.txt (HEAD -> refactoring)
+>Thu, 18 Feb 2021 13:49:27 +0100
+
+>Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Add licence in the header of each python file (origin/refactoring)
 >Thu, 18 Feb 2021 06:26:00 +0100
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Refactoring (origin/refactoring)
+### Refactoring
 >Thu, 18 Feb 2021 06:15:51 +0100
 
 >Author: Jean-Christophe Malapert (jean-christophe.malapert@cnes.fr)
